# Autonoma

./: LICENSE  pyproject.toml  readme.md  setup.py
src/autonoma/: __init__.py  main.py
src/autonoma/config/: settings.py
src/autonoma/core/: agent.py  coder.py  planner.py  tester.py
src/autonoma/models/: __init__.py  agent.py  code.py  coder.py  excecution.py  project.py  request.py  result.py  task.py  test.py
src/autonoma/utils/: code_executor.py  file_manager.py  file_operations.py  llm_interface.py  reflection.py
